tests/analyze/task-mixed-carriers/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `result a b`, but found `task int a`.
> 7 | 	try x = ok 1
       ^^^^^^^^^^^^

error: Type mismatch: expected `result a b`, but found `task a b`.
> 7 | 	try x = ok 1
       ^^^^^^^^^^^^
